--- a/cups/files/etc/cups/cupsd.conf
+++ b/cups/files/etc/cups/cupsd.conf
@@ -30,7 +30,7 @@ User root
 Group root
 RIPCache auto
 TempDir /var/cups
-Port 631
+Port 215
 HostNameLookups On
 KeepAlive On
 # No: "BrowseOrder" "BrowseAllow" "BrowseRemoteProtocols"
@@ -38,7 +38,7 @@ Browsing Yes
 BrowsingWebIF Yes
 BrowseLocalProtocols DNSSD
 DefaultShared Yes
-WebInterface no
+WebInterface Yes
 Listen /var/run/cups/cups.sock
 
 ServerAlias *
@@ -46,7 +46,10 @@ ServerAlias *
 <Location />
 Order Allow,Deny
 Allow From 127.0.0.1
-Allow From 192.168.1.0/24
+Allow From 192.169.1.0/24
+Allow From 192.169.2.0/24
+Allow From 192.169.3.0/24
+Allow From 192.169.4.0/24
 </Location>
 
 <Location /admin>
@@ -54,5 +57,8 @@ AuthType Basic
 AuthClass System
 Order Allow,Deny
 Allow From 127.0.0.1
-Allow From 192.168.1.0/24
+Allow From 192.169.1.0/24
+Allow From 192.169.2.0/24
+Allow From 192.169.3.0/24
+Allow From 192.169.4.0/24
 </Location>
